--- a/package.json
+++ b/package.json
@@ -25,8 +25,12 @@
     "@nestjs/core": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
     "@prisma/client": "4.11.0",
+    "cloudinary": "^1.41.0",
+    "ethers": "^6.7.1",
+    "nestjs-s3": "^2.0.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
+    "web3": "^4.1.2",
     "web3-token": "^1.0.4"
   },
   "devDependencies": {
@@ -35,6 +39,7 @@
     "@nestjs/testing": "^9.0.0",
     "@types/express": "^4.17.13",
     "@types/jest": "29.2.4",
+    "@types/multer": "^1.4.8",
     "@types/node": "18.11.18",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
